# LinearAttentionPruning

./: .gitignore  README.md  pyproject.toml  requirements.txt
flame/: train.sh
flame/benchmarks/: benchmark_forward.py  benchmark_generation.py  benchmark_mixer.py  benchmark_mixer_scaling.py
flame/configs/: delta_net_2_340M.json  delta_net_2_head_340M.json  gated_deltanet_340M.json
flame/custom_models/delta_net_2/: __init__.py  configuration_delta_net_2.py  delta_net_2.py  modeling_delta_net_2.py
flame/flame/: config_manager.py  eval_checkpoint.py  train.py
flame/flame/models/: parallelize_fla.py
flame/flame/scripts/: deltanet_2_340m.sh  deltanet_2_head_340m.sh  deltanet_2_head_shared_340m.sh  deltanet_340m.sh  gated_deltanet_340m.sh
flame/flame/utils/: convert_dcp_to_hf.py  convert_hf_to_dcp.py
flash-linear-attention/: .pre-commit-config.yaml  pyproject.toml
flash-linear-attention/fla/layers/: __init__.py  attn.py  delta_net.py  gla_high_rank.py
flash-linear-attention/fla/modules/: fused_bitlinear.py
flash-linear-attention/tests/models/: test_modeling_base.py
flash-linear-attention/tests/modules/: test_grpo.py
flash-linear-attention/tests/ops/: test_comba.py  test_forgetting_attn.py  test_gated_delta.py  test_kda.py  (+1 more)
scripts/benchmarking/: benchmark_forward.sh  benchmark_generation.sh  benchmark_mixer.sh
scripts/eval/: create_eval_table.py  effective_state_rank.py  eval_batch_parallel.py  eval_batch_parallel.sh  eval_checkpoint.py  eval_single_file.sh  evaluation.ipynb  run_effective_state_rank.sh
scripts/finetuning/: run_lora.sh
scripts/multi_run/: run_multi_grad.sh  run_multi_l1.sh  run_multi_pca.sh  run_multi_random.sh  run_multi_rrqr.sh  run_multi_wanda.sh
scripts/run_pruning/: run_grad.sh  run_l1.sh  run_pca.sh  run_random.sh  run_rrqr.sh  run_wanda.sh
src/key_reduction/: __init__.py
(+22 files in other folders)
