[project]
name = "keyreduction"
version = "0.1.0"
description = "This library accompanies the paper 'The Key to State Reduction in Linear Attention: A Rank-based Perspective'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.12.0",
    "einops==0.7.0",
    "flame",
    "flash-linear-attention",
    "lm-eval==0.4.9.2",
    "matplotlib==3.10.8",
    "peft==0.18.0",
    "ray==2.53.0",
    "scipy==1.15.3",
    "tensorboard==2.20.0",
    "tokenizers==0.22.0",
    "torch==2.9.1",
    "torchdata==0.11.0",
    "torchtitan",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton==3.5.1",
    "tyro==1.0.1",
    "wandb==0.16.2",
]

[tool.uv.sources]
torchtitan = { git = "https://github.com/pytorch/torchtitan.git", rev = "0b44d4c437c424b6bf719661c0eb4283dc4068bc" }
flash-linear-attention = { workspace = true, editable = true }
flame = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "flash-linear-attention",
    "flame",
]
